IN PROGRESS - issue HERASAFXACMLCORE-55: Cleanup Checkstyle issues http://jira.herasaf.org/browse/HERASAFXACMLCORE-55
removed some of the checkstyle-warnings.

git-svn-id: svn://localhost/herasaf-xacmlnew/trunk/herasaf-xacml/herasaf-xacml-core@1480 281314fa-7b5e-d943-bc7f-69d318bcf3fb